--- a/booker-app/index.html
+++ b/booker-app/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" href="/icons/icon-16.png" sizes="16x16" />
     
     <!-- iOS Safari PWA Meta Tags -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="NessBook" />
     
